shared_library updated

--- a/.github/workflows/terraform-setup.yml
+++ b/.github/workflows/terraform-setup.yml
@@ -20,7 +20,7 @@ on:
         required: true
         type: string
       working-directory:
-        description: 'Working Directory'
+        description: 'Working directory'
         required: true
         type: string
 
