--- a/.github/workflows/terraform-setup.yml
+++ b/.github/workflows/terraform-setup.yml
@@ -20,8 +20,6 @@ on:
         required: true
       AWS_SECRET_ACCESS_KEY:
         required: true
-      TF_CLOUD_TOKEN:
-        required: true
 
 jobs:
   terraform:
@@ -49,7 +47,7 @@ jobs:
           {
             "credentials": {
               "app.terraform.io": {
-                "token": "${{ secrets.TF_CLOUD_TOKEN }}"
+                "token": "${{ inputs.tf-cloud-token }}"
               }
             }
           }
