--- a/.github/workflows/terraform-setup.yml
+++ b/.github/workflows/terraform-setup.yml
@@ -7,19 +7,22 @@ on:
         description: 'AWS Region'
         required: true
         type: string
+      tf-cloud-token:
+        description: 'Terraform Cloud Token'
+        required: true
+        type: string
+      aws-access-key-id:
+        description: 'AWS Access Key ID'
+        required: true
+        type: string
+      aws-secret-access-key:
+        description: 'AWS Secret Access Key'
+        required: true
+        type: string
       working-directory:
         description: 'Working directory'
         required: true
         type: string
-      tf-cloud-token:
-        description: 'Terraform token'
-        required: true
-        type: string
-    secrets:
-      AWS_ACCESS_KEY_ID:
-        required: true
-      AWS_SECRET_ACCESS_KEY:
-        required: true
 
 jobs:
   terraform:
@@ -32,14 +35,12 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          fetch_depth: 0
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-access-key-id: ${{ inputs.aws-access-key-id }}
+          aws-secret-access-key: ${{ inputs.aws-secret-access-key }}
           aws-region: ${{ inputs.aws-region }}
 
       - name: Configure Terraform credentials
