--- a/.github/workflows/terraform-setup.yml
+++ b/.github/workflows/terraform-setup.yml
@@ -9,11 +9,10 @@ on:
         type: string
       working-directory:
         type: string
-    secrets:
       aws-access-key-id:
-        required: true
+        type: string
       aws-secret-access-key:
-        required: true
+        type: string
 
 jobs:
   terraform:
