--- a/.github/workflows/terraform-setup.yml
+++ b/.github/workflows/terraform-setup.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
         with:
-          terraform_version: 1.1.7 # Specify the desired Terraform version
+          terraform_version: 1.9.3
 
       - name: "Configure Terraform credentials"
         run: |
