--- a/.github/workflows/terraform-setup.yml
+++ b/.github/workflows/terraform-setup.yml
@@ -58,7 +58,7 @@ jobs:
       - name: Terraform Plan
         id: plan
         run: terraform plan
-      
+
       - name: Terraform plan status
         if: steps.plan.outcome == 'failure'
         run: echo "Terraform plan failed"
@@ -67,3 +67,7 @@ jobs:
         id: apply
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: terraform apply -auto-approve
+
+      - name: Set output
+        if: steps.apply.outcome == 'success'
+        run: echo "::set-output name=apply_status::success"
